# NeuroRobot

./: .gitattributes  .gitignore  NeuroRobot Toolbox.prj  New laptop instructions.txt  README.md  ReadMe.md  SpikerBot Toolbox.prj  SpikerBot.aip  SpikerBot.prj  SpikerBot_Win.prj  SpikerBot_wizard.prj  agent_1.mat  chris' bug notes.txt  compile_code.asv  compile_code.m  error_1.txt  error_2.txt  gitignore  gpu memory error.txt  pubspec.yaml  settings.csv
AI/: SpeechToTextAutomation.p  chatty_ai.m  generate_people.m  prepare_word.m  speech2text.m  speechClient.m  talking_head_classifier.m
ANNs/: test_detector.m
Archive/: Chopin.mat  Merlin.mat  Moinet.mat  Removed during Jan2022 cleanup.txt  Signet.mat  TestDelay.mat
Detectors/: BaseSpeechClient.p  GoogleSpeechClient.p  ai.py  ai2.py  ai_expander.m  bybai.m  (+60 more)
PLUGINS/native_opencv/android/: CMakeLists.txt  build.gradle
PLUGINS/native_opencv/android/src/main/: AndroidManifest.xml
PLUGINS/native_opencv/android/src/main/java/com/backyardbrains/native_opencv/: NativeOpencvPlugin.java
PLUGINS/native_opencv/android/src/main/kotlin/com/backyardbrains/native_opencv/: NativeOpencvPlugin.kt
PLUGINS/native_opencv/android/src/test/java/com/backyardbrains/native_opencv/: NativeOpencvPluginTest.java
PLUGINS/native_opencv/android/src/test/kotlin/com/backyardbrains/native_opencv/: NativeOpencvPluginTest.kt
PLUGINS/nativec/android/: CMakeLists.txt  build.gradle  settings.gradle
PLUGINS/nativec/android/src/main/: AndroidManifest.xml
PLUGINS/nativec/android/src/main/java/com/backyardbrains/nativec/: NativecPlugin.java
(+168454 files in other folders)
